--- a/ExtendedWPFToolkitSolution/Src/Samples/Samples/App.config
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Samples/App.config
@@ -7,5 +7,13 @@
   <modules>
     <module assemblyFile="Samples.Modules.BusyIndicator.dll" moduleType="Samples.Modules.BusyIndicator.BusyIndicatorModule, Samples.Modules.BusyIndicator" moduleName="BusyIndicatorModule" />
     <module assemblyFile="Samples.Modules.Button.dll" moduleType="Samples.Modules.Button.ButtonModule, Samples.Modules.Button" moduleName="ButtonModule" />
+    <module assemblyFile="Samples.Modules.Calculator.dll" moduleType="Samples.Modules.Calculator.CalculatorModule, Samples.Modules.Calculator" moduleName="CalculatorModule" />
+    <module assemblyFile="Samples.Modules.ChildWindow.dll" moduleType="Samples.Modules.ChildWindow.ChildWindowModule, Samples.Modules.ChildWindow" moduleName="ChildWindowModule" />
+    <module assemblyFile="Samples.Modules.Color.dll" moduleType="Samples.Modules.Color.ColorModule, Samples.Modules.Color" moduleName="ColorModule" />    
+    <module assemblyFile="Samples.Modules.DateTime.dll" moduleType="Samples.Modules.DateTime.DateTimeModule, Samples.Modules.DateTime" moduleName="DateTimeModule" />
+    
+    <module assemblyFile="Samples.Modules.Numeric.dll" moduleType="Samples.Modules.Numeric.NumericModule, Samples.Modules.Numeric" moduleName="NumericModule" />
+    <module assemblyFile="Samples.Modules.PropertyGrid.dll" moduleType="Samples.Modules.PropertyGrid.PropertyGridModule, Samples.Modules.PropertyGrid" moduleName="PropertyGridModule" />
+    <module assemblyFile="Samples.Modules.Text.dll" moduleType="Samples.Modules.Text.TextModule, Samples.Modules.Text" moduleName="TextModule" />
   </modules>
 </configuration>
