--- a/ExtendedWPFToolkitSolution/Src/Samples/Samples/Samples.csproj
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Samples/Samples.csproj
@@ -120,6 +120,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Background.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
