--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Samples/App.config
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Samples/App.config
@@ -14,5 +14,6 @@
     <module assemblyFile="Samples.Modules.Numeric.dll" moduleType="Samples.Modules.Numeric.NumericModule, Samples.Modules.Numeric" moduleName="NumericModule" />
     <module assemblyFile="Samples.Modules.PropertyGrid.dll" moduleType="Samples.Modules.PropertyGrid.PropertyGridModule, Samples.Modules.PropertyGrid" moduleName="PropertyGridModule" />
     <module assemblyFile="Samples.Modules.Text.dll" moduleType="Samples.Modules.Text.TextModule, Samples.Modules.Text" moduleName="TextModule" />
+    <module assemblyFile="Samples.Modules.Wizard.dll" moduleType="Samples.Modules.Wizard.WizardModule, Samples.Modules.Wizard" moduleName="WizardModule" />
   </modules>
 </configuration>
