Starting to work on the styling of the Wizard control and WizardPages

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Wizard\Implementation\WizardPage.cs" />
     <Compile Include="Wizard\Implementation\Wizard.cs" />
     <Compile Include="Wizard\Implementation\WizardPageButtonVisibility.cs" />
+    <Compile Include="Wizard\Implementation\WizardPageType.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
